# Camera_Lidar

./: .gitignore  README.md
Autonomous Vehicles and Computer Vision/The OpenCV Library/OpenCV_exercises/: CMakeLists.txt
Autonomous Vehicles and Computer Vision/The OpenCV Library/OpenCV_exercises/src/: change_pixels.cpp  load_image_3.cpp
Combining Camera and Lidar/Creating 3D-Objects/cluster_with_roi/src/: cluster_with_roi.cpp
Engineering a Collision Detection System/Estimating TTC with Camera/TTC_camera/src/: compute_ttc_camera.cpp
Lesson 2 - Autonomous Vehicles and Computer Vision/The OpenCV Library/OpenCV_exercises/.cache/clangd/index/: change_pixels.cpp.7BB01221A4AC3019.idx  create_matrix.cpp.D1E7F4E5FE11E1E3.idx  load_image_1.cpp.CC753E8D288990F4.idx  load_image_2.cpp.C6045832D81C9665.idx  load_image_3.cpp.D5FF85D5663EDA5F.idx
Lesson 2 - Autonomous Vehicles and Computer Vision/The OpenCV Library/OpenCV_exercises/src/: change_pixels.cpp  create_matrix.cpp  load_image_1.cpp
Lesson 3 - Engineering a Collision Detection System/Estimating TTC with Camera/TTC_camera/: CMakeLists.txt
Lesson 3 - Engineering a Collision Detection System/Estimating TTC with Camera/TTC_camera/.cache/clangd/index/: compute_ttc_camera.cpp.70D82AAFB184BA40.idx  dataStructures.h.BB0253CADB231D33.idx  structIO.cpp.39BDB4FD95526105.idx  structIO.hpp.B6C5D1854BCC6452.idx
Lesson 3 - Engineering a Collision Detection System/Estimating TTC with Camera/TTC_camera/src/: compute_ttc_camera.cpp
Lesson 3 - Engineering a Collision Detection System/Estimating TTC with Lidar/TTC_lidar/src/: compute_ttc_lidar.cpp
Lesson 4 - Tracking Image Features/Descriptor Matching/descriptor_matching/.cache/clangd/index/: dataStructures.h.B8AFEBE0F94CA02F.idx  descriptor_matching.cpp.EFEDBF66EF821AA4.idx  structIO.cpp.5D170C16BC433D25.idx  structIO.hpp.B1BCF3A5019F7C53.idx
Lesson 4 - Tracking Image Features/Descriptor Matching/descriptor_matching/src/: descriptor_matching.cpp
Lesson 4 - Tracking Image Features/Gradient-based vs. Binary Descriptors/describe_keypoints/.cache/clangd/index/: describe_keypoints.cpp.9D230DB0E8C5248D.idx
Lesson 4 - Tracking Image Features/Gradient-based vs. Binary Descriptors/describe_keypoints/src/: describe_keypoints.cpp
Lesson 4 - Tracking Image Features/Harris Corner Detection/cornerness_harris/: CMakeLists.txt
Lesson 4 - Tracking Image Features/Harris Corner Detection/cornerness_harris/.cache/clangd/index/: cornerness_harris.cpp.24CD1FE0B8261379.idx
Lesson 4 - Tracking Image Features/Harris Corner Detection/cornerness_harris/src/: cornerness_harris.cpp
Lesson 4 - Tracking Image Features/Intensity Gradient and Filtering/gradient_filtering/: CMakeLists.txt
Lesson 4 - Tracking Image Features/Intensity Gradient and Filtering/gradient_filtering/.cache/clangd/index/: gaussian_smoothing.cpp.A3E0DA64185E2222.idx  gradient_sobel.cpp.EB148E02BEE9F2A2.idx  magnitude_sobel.cpp.9B6E7E529F32B7E2.idx
Lesson 4 - Tracking Image Features/Intensity Gradient and Filtering/gradient_filtering/src/: gradient_sobel.cpp
Lesson 4 - Tracking Image Features/Overview of Popular Keypoint Detectors/detect_keypoints/src/: detect_keypoints.cpp
Lesson 4 - Tracking Image Features/Overview of Popular Keypoint Detectors/solution/: detect_keypoints.cpp
Lesson 6 - Combining Camera and Lidar/Creating 3D-Objects/cluster_with_roi/: CMakeLists.txt
Lesson 6 - Combining Camera and Lidar/Creating 3D-Objects/cluster_with_roi/src/: cluster_with_roi.cpp
Lesson 6 - Combining Camera and Lidar/Lidar-to-Camera Point Projection/lidar_to_camera/: CMakeLists.txt
Lesson 6 - Combining Camera and Lidar/Lidar-to-Camera Point Projection/lidar_to_camera/src/: project_lidar_to_camera.cpp  show_lidar_top_view.cpp  structIO.cpp  structIO.hpp
Lesson 6 - Combining Camera and Lidar/Object Detection with YOLO/detect_objects/: CMakeLists.txt
Lesson 6 - Combining Camera and Lidar/Object Detection with YOLO/detect_objects/src/: detect_objects_2.cpp
Tracking Image Features/Descriptor Matching/descriptor_matching/: CMakeLists.txt
Tracking Image Features/Gradient-based vs. Binary Descriptors/describe_keypoints/: CMakeLists.txt
Tracking Image Features/Gradient-based vs. Binary Descriptors/describe_keypoints/src/: describe_keypoints.cpp
Tracking Image Features/Intensity Gradient and Filtering/gradient_filtering/src/: gaussian_smoothing.cpp  magnitude_sobel.cpp
